--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -1,18 +1,31 @@
+body{
+background-color: #c55;
+}
+
+h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 18px;
+}
+
 .bayan {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #2dd26a;
+  color: #101;
+  cursor: hand;
   padding: 18px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
-  transition: 0.4s;
+  font-size: 25px;
+  font-weight: bold;
+  background: #b000b5 url(../icons/icons8-add-new-24.png) no-repeat right center;
 }
 
-.active, .bayan:hover {
+.bayan:hover, .bayan:focus {
   background-color: #ccc; 
+  background: #b000b5 url(../icons/icons8-add-new-48.png) no-repeat right center;
+  animation: fade_in 0.5s;
 }
 
 .content {
@@ -24,4 +37,24 @@
 
 .bayan:hover +div, .bayan:focus + div {
   display: block;
+  cursor: hand;
+  /*animation: fade_in 0.5s;*/
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  animation: fade_in 0.5s;
+}
+
+@keyframes fade_in {
+  0% {
+       opacity: 0.8;
+  }
+
+  100% {
+       opacity: 1;
+  }
 }
