--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -1,7 +1,3 @@
-body{
-background-color: #c55;
-}
-
 h1{
   font-family: Georgia, 'Times New Roman', Times, serif;
   padding: 18px;
@@ -22,9 +18,15 @@ h1{
   background: #b000b5 url(../icons/icons8-add-new-24.png) no-repeat right center;
 }
 
-.bayan:hover, .bayan:focus {
+.bayan:hover{
   background-color: #ccc; 
   background: #b000b5 url(../icons/icons8-add-new-48.png) no-repeat right center;
+  animation: fade_in 0.5s;
+}
+
+.bayan:focus {
+  background-color: #ccc; 
+  background: #b000b5 url(../icons/icons8-add-new-96.png) no-repeat right center;
   animation: fade_in 0.5s;
 }
 
